--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,15 +1,21 @@
 @import "~bootstrap/scss/bootstrap";
 
-main {
-    background-color: lightcoral;
+
+/*   RESET   */
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
+    list-style: none;
 }
 
-.gatto-img {
-    height: 200px;
+img {
+    width: 100%;
 }
 
-.gatto-bg {
-    height: 200px;
-    background-image: url('../img/gatto.webp');
-    background-size: contain;
+a {
+    text-decoration: none;
 }
