--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,8 +8,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     list-style: none;
+    
 }
 
 img {
